--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,13 +7,31 @@
   "background_color": "#ffffff",
   "theme_color": "#3b82f6",
   "orientation": "portrait",
+  "scope": "/",
   "icons": [
     {
       "src": "/logo.png",
-      "sizes": "any",
+      "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/logo.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
-  "categories": ["health", "medical", "lifestyle"]
+  "categories": ["health", "medical", "lifestyle"],
+  "prefer_related_applications": false,
+  "gcm_sender_id": "103953800507",
+  "permissions": [
+    "notifications",
+    "push"
+  ],
+  "notification_preferences": {
+    "show_on_lock_screen": true,
+    "vibrate": true,
+    "sound": true
+  }
 }
